...
        <View
            android:id="@+id/regist_psw_view"
            style="@style/edit_blue_line"
            android:layout_below="@id/regist_psw_ll" />

        <com.dudu.aiowner.utils.customFontUtils.FZLFontTextView
            android:id="@+id/regist_phonenumber_btn"
            style="@style/button_big"
            android:layout_below="@id/regist_psw_view"
            android:layout_marginTop="80dp"
            android:background="@drawable/btn_bg_sel_line"
            android:onClick="startIdentifyingCode"
            android:text="注 册" />
...
