...
            <RelativeLayout
                android:id="@+id/anim_lock_rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ToggleButton
                    android:id="@+id/theft_switch"
                    android:layout_width="130dp"
                    android:layout_height="285dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerInParent="true"
                    android:background="@drawable/theft_switch_btn_sel"
                    android:checked="false"
...
